--- a/sync-settings.yml
+++ b/sync-settings.yml
@@ -1,5 +1,29 @@
 update-exclude:
-- config/sodium-settings.json
 - options.txt
+- .nl_password
+- config/sodium-settings.json
+- patchouli_data.json
+- usercache.json
+- usernamecache.json
+- servers.dat_old
+- servers.dat.bak
 - assets/
 - .cache/
+- blueprints/
+- crash-reports/
+- emojiful/
+- exposures/
+- fancymenu_data/
+- hammerlib/
+- local/
+- logs/
+- patchouli_books/
+- potionblender/
+- saves/
+- schematics/
+- screenshots/
+- shaderpacks/
+- xaero/
+- ./
+- XaeroWaypoints_BACKUP*/
+- .vscode/
