--- a/.github/workflows/create-client-checksum.yml
+++ b/.github/workflows/create-client-checksum.yml
@@ -30,6 +30,6 @@ jobs:
           git add hash.txt
           git commit -m checksum-updated
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git push
+          git push -f
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
