described format in short

--- a/sync-settings.yml
+++ b/sync-settings.yml
@@ -1,4 +1,9 @@
 minecraft-version: 1.20.1
+
+# Формат:
+# / на конце - вся директория будет проигнорирована
+# * в слове - всё, что содержит слово будет проигнорировано также
+# без знаков выше - обозначает единственный файл
 update-exclude:
 - options.txt
 - .nl_password
