--- a/sync-settings.yml
+++ b/sync-settings.yml
@@ -1,4 +1,4 @@
-minecraft-version: 1.20.1
+minecraft-version: 1.20.1-forge-47.3.22
 
 # Формат:
 # / на конце - вся директория будет проигнорирована
