--- a/sync-settings.yml
+++ b/sync-settings.yml
@@ -8,6 +8,7 @@ update-exclude:
 - options.txt
 - .nl_password
 - config/sodium-settings.json
+- config/fml.toml
 - patchouli_data.json
 - launcher_profiles.json
 - usercache.json
